--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^2.2.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
